--- a/css/main.css
+++ b/css/main.css
@@ -101,11 +101,100 @@ textarea {
     padding: 0.2em 0;
 }
 
+
+/* ==========================================================================
+   DEBUG
+   ========================================================================== */
+
+body{
+  background-image: url(../mockups/casaPortuguesa_v7_contador_ballon_com_foto.jpg);
+}
+header{
+  /*opacity:0.5;*/
+}
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
 
+body,
+header,
+header .logo,
+#instagram-icon {
+  background-repeat: no-repeat;
+}
+
+body{
+  background-position: top center;
+  background-color: #231f20;
+  background-color: green;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+a{
+  text-decoration: none;
+}
+
+header{
+  height:151px;
+  padding-bottom: 47px;
+  background-image: url(../img/sombra.png);
+  background-position:center bottom;
+}
+
+header .bg{
+  width:100%;
+  height:171px;
+  background-color:#ffffff;
+}
+header .content{
+  margin: auto;
+  width:1088px;
+}
+
+header .logo{
+  margin:0;
+  height:151px;
+  width:345px;
+  float: left;
+  background-image: url(../img/logos.png);
+  background-position: 0px 19px;
+  margin-right: 113px;
+}
+
+header nav ul{
+  margin:0px;
+}
+header nav ul li{
+  float: left;
+  margin-right: 10px;
+  padding-bottom: 13px;
+}
+header nav ul li a{
+  display: table-cell;
+  height: 136px;
+  vertical-align: bottom;
+  font-size: 12px;
+  line-height: 12px;
+  color: #231f20 !important;
+  padding:11px;
+  background-color: #fff;
+}
+header nav ul li.active,
+header nav ul li:hover{
+  background: #ed1941; /*vermelho da bola do logo*/
+  background-color: rgba(237,25,65,0.9);
+}
+
+#instagram-icon {
+  width:55px;
+  height:145px;
+  margin-left: 15px;
+  float: left;
+  background-image: url(../img/instagram.png);
+  background-position: 0px bottom;
+}
 
 
 
