--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ textarea {
 body{
   background-image: url(../mockups/casaPortuguesa_v7_contador_ballon_com_foto.jpg);
 }
+#content aside,
 header{
   /*opacity:0.5;*/
 }
@@ -123,6 +124,13 @@ header,
 header .logo,
 #instagram-icon {
   background-repeat: no-repeat;
+}
+
+header .logo,
+header nav ul,
+#content aside h1,
+#content aside h2{
+  margin:0;
 }
 
 body{
@@ -158,7 +166,6 @@ header .content,
 }
 
 header .logo{
-  margin:0;
   height:151px;
   width:345px;
   float: left;
@@ -167,9 +174,6 @@ header .logo{
   margin-right: 113px;
 }
 
-header nav ul{
-  margin:0px;
-}
 header nav ul li{
   float: left;
   margin-right: 10px;
@@ -208,11 +212,46 @@ header nav ul li:hover,
 #content aside{
   position: absolute;
   top: -27px;
+  padding:28px;
+  padding-top: 22px;
+  padding-right: 22px;
   display: none;
 }
 #content aside.opened{
   display: block;
 }
+
+#content aside section{
+  width: 100%;
+  display: table;
+}
+#content aside .foto{
+  width:143px;
+  height:143px;
+  vertical-align: top;
+  margin-right:20px;
+}
+
+#content aside .content{
+  display: table-cell;
+}
+
+#content aside h1{
+  font-size: 26px;
+  line-height: 26px;
+  font-weight: lighter;
+  letter-spacing:1px;
+}
+
+#content aside h2,
+#content aside p{
+  font-size: 13px;
+}
+#content aside p{
+  margin-top: 15px;
+  line-height: 16px;
+}
+
 #content #projeto{
 /*458 .. 527*/
   left: 444px;
@@ -227,7 +266,8 @@ header nav ul li:hover,
 }
 #content #coletivos{
 /*739 .. 823*/
-  left: 725px;
+  left: 572px;
+  width:398px;
 }
 #content #inauguracao{
 /*833 .. 926*/
@@ -237,7 +277,6 @@ header nav ul li:hover,
 /*936 .. 1005*/
   left: 922px;
 }
-
 
 
 
