--- a/css/main.css
+++ b/css/main.css
@@ -459,7 +459,8 @@ header nav ul li.external:hover{
   overflow: hidden;
 }
 #content #message-popup .close-button a{
-  padding-left: 20px;
+  padding-left: 18px;
+  color:transparent;
 }
 #content #share{
   position: absolute;
