--- a/css/main.css
+++ b/css/main.css
@@ -24,15 +24,15 @@ body {
 }
 
 a {
-    color: #00e;
+    color: #FFF;
 }
 
 a:visited {
-    color: #551a8b;
+    color: #FFF;
 }
 
 a:hover {
-    color: #06e;
+    color: #FFF;
 }
 
 /*
