--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,8 @@ header nav ul li.external:hover{
   position: absolute;
   min-height: 700px;
   width: 100%;
+	top:-27px;
+/*	background-color: rgba(0,0,255,.2);*/
 }
 #main #contador{
   width:1033px;
@@ -676,12 +678,84 @@ header nav ul li.external:hover{
 }
 
 
+/* ==================
+   Mauricio
+   ================== */
 
+#main ol li {
+	position: relative;
+	list-style: none;
+	float: left;
+	width: 256px;
+	height: 256px;
+}
+#main ol.destaques {
+	position: relative;
+	top: -16px;
+	left: -8px;
+}
+#main ol.destaques li a {
+	position: absolute;
+}
+#main ol.destaques li span {
+	position: absolute;
+	right: 0px;
+	bottom: -25px;
+	text-align:right;
+	font-size:77px;
+	font-weight: 100;
+	letter-spacing:-3px;
+	padding-left: 20px;
+	background-image: url("../img/heart.png");
+	background-repeat: no-repeat;
+	background-position: 0px 50px;
+}
+#main p.primeiro {
+	padding-top: 27px;
+	color: white;
+}
+#main p.ultimo {
+	padding-bottom: 25px;
+}
+#main p {
+	clear: both;
+	text-align: center;
+	font-size: 25px;
+	line-height: 6px;
+	color: rgba(255,255,255,.5);
+}
+#main ol.recentes{
+	position: relative;
+	top: 0px;
+	left: -8px;
+}
+#main ol.recentes li{
+	width: 143px;
+	height: 143px;
+	margin-right: 4px;
+	margin-bottom: 4px;
+}
+#main ol.recentes img{
+	width: 143px;
+	height: 143px;
+}
+#main #mouse-over{
+	position: absolute;
+	top: 586px;
+	left: -24px;
+}
+#main #mouse-over img{
+	box-shadow: 0px 5px 25px 8px #231F20;
+}
 
-
-
-
-
+/*omitir em produção*/
+#ref img{
+	position: absolute;
+	top: -27px;
+	left: -97px;
+	opacity: .2;
+	z-index: 1000;
+}
 
 
 /* ==========================================================================
