--- a/css/admin.css
+++ b/css/admin.css
@@ -3,7 +3,7 @@
 }
 ol.destaques textarea{
   position: absolute;
-  bottom: 50%;
+  bottom: 45%;
   left: 15%;
   width:70%;
   background: rgba(255,255,255,0.5);
@@ -52,8 +52,6 @@ ol.destaques textarea{
 #main ol.recentes li .destaque input{
   width:3em;
 }
-
-
 #main ol.recentes li label i.blacklist-photo-icon,
 #main ol.recentes li label i.blacklist-user-icon,
 #main ol.recentes li label i.destaque-icon{
@@ -61,9 +59,11 @@ ol.destaques textarea{
   display: inline-block;
   width:16px;
   height:16px;
+  margin-left:7px;
 }
 #main ol.recentes li label i.destaque-icon{
   background-position: 0 16px;
+  margin-right:9px;
 }
 #main ol.recentes li label i.blacklist-photo-icon{
   background-position: 0 0px;
@@ -72,7 +72,7 @@ ol.destaques textarea{
   background-position: 0 32px;
 }
 #main ol.recentes li label input[type="checkbox"]{
-  height:20px;
+  height:12px;
 }
 
 .primeiro a:hover{
